--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
   <link rel="icon" href="assets/logo-placeholder.svg">
 </head>
 <body>
-  <!-- starry background -->
-  <div class="stars"></div>
+  <!-- Animated canvas background -->
+  <canvas id="space" aria-hidden="true"></canvas>
+  <div class="vignette" aria-hidden="true"></div>
 
-  <!-- Top stats bar -->
+  <!-- Top stats -->
   <header class="top">
-    <div class="stat left">
-      <button id="copyIp" class="copy" title="Click to copy server IP">📋</button>
+    <div class="stat left glass">
+      <button id="copyIp" class="copy" title="Click to copy server IP">Copy IP</button>
       <span id="players" class="muted">? Online Players</span>
     </div>
 
     <div class="logo-wrap">
-      <!-- Placeholder logo; replace the src with your final logo file later -->
-      <img src="assets/logo-placeholder.svg" alt="Server logo placeholder" class="logo" />
+      <!-- Placeholder logo; swap the src later -->
+      <img src="assets/logo-placeholder.svg" alt="Server logo" class="logo drop" />
     </div>
 
-    <div class="stat right">
+    <div class="stat right glass">
       <span class="muted">Join our Discord</span>
       <a class="discord" href="https://discord.com/channels/1408337450958458921/1408337452061556777" target="_blank" rel="noopener">Open</a>
     </div>
   </header>
 
-  <!-- Main menu -->
+  <!-- Main nav -->
   <main class="content">
     <nav class="menu">
       <a class="pill" href="https://discord.com/channels/1408337450958458921/1411037949331509390" target="_blank" rel="noopener">Forum</a>
@@ -43,13 +44,16 @@
       <a class="pill" href="https://discord.com/channels/1408337450958458921/1408337452061556777" target="_blank" rel="noopener">Rules</a>
     </nav>
 
-    <!-- Social icons row (Discord + YouTube placeholder) -->
     <div class="socials">
-      <a class="icon" href="https://discord.com/channels/1408337450958458921/1408337452061556777" target="_blank" rel="noopener" aria-label="Discord">
-        <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true"><path d="M20.317 4.369A19.791 19.791 0 0016.558 3c-.2.36-.434.848-.594 1.23a18.27 18.27 0 00-4.928 0c-.16-.382-.394-.87-.594-1.23-1.44.264-2.82.73-4.117 1.37C2.45 9.089 1.507 13.61 1.865 18.06A19.9 19.9 0 006.293 20c.35-.48.663-.99.932-1.525-.512-.195-1.004-.423-1.473-.683.124-.09.246-.183.364-.276 2.84 1.322 5.91 1.322 8.741 0 .12.095.242.188.364.276-.47.26-.963.489-1.475.683.27.535.583 1.045.933 1.525a19.9 19.9 0 004.427-1.94c.36-4.58-.597-9.101-3.789-13.691zM9.186 14.509c-.86 0-1.559-.79-1.559-1.764 0-.973.695-1.764 1.559-1.764.87 0 1.565.791 1.559 1.764 0 .973-.695 1.764-1.559 1.764zm5.628 0c-.86 0-1.559-.79-1.559-1.764 0-.973.695-1.764 1.559-1.764.87 0 1.565.791 1.559 1.764 0 .973-.69 1.764-1.559 1.764z" fill="currentColor"/></svg>
+      <a class="icon glass" href="https://discord.com/channels/1408337450958458921/1408337452061556777" target="_blank" rel="noopener" aria-label="Discord">
+        <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true">
+          <path d="M20.317 4.369A19.791 19.791 0 0016.558 3c-.2.36-.434.848-.594 1.23a18.27 18.27 0 00-4.928 0c-.16-.382-.394-.87-.594-1.23-1.44.264-2.82.73-4.117 1.37C2.45 9.089 1.507 13.61 1.865 18.06A19.9 19.9 0 006.293 20c.35-.48.663-.99.932-1.525-.512-.195-1.004-.423-1.473-.683.124-.09.246-.183.364-.276 2.84 1.322 5.91 1.322 8.741 0 .12.095.242.188.364.276-.47.26-.963.489-1.475.683.27.535.583 1.045.933 1.525a19.9 19.9 0 004.427-1.94c.36-4.58-.597-9.101-3.789-13.691zM9.186 14.509c-.86 0-1.559-.79-1.559-1.764 0-.973.695-1.764 1.559-1.764.87 0 1.565.791 1.559 1.764 0 .973-.695 1.764-1.559 1.764zm5.628 0c-.86 0-1.559-.79-1.559-1.764 0-.973.695-1.764 1.559-1.764.87 0 1.565.791 1.559 1.764 0 .973-.69 1.764-1.559 1.764z" fill="currentColor"/>
+        </svg>
       </a>
-      <a class="icon" href="#" aria-label="YouTube" title="Coming soon">
-        <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true"><path d="M23.5 6.2a3.3 3.3 0 00-2.3-2.3C19.1 3.5 12 3.5 12 3.5s-7.1 0-9.2.4A3.3 3.3 0 00.5 6.2 34.2 34.2 0 000 12a34.2 34.2 0 00.5 5.8 3.3 3.3 0 002.3 2.3c2.1.4 9.2.4 9.2.4s7.1 0 9.2-.4a3.3 3.3 0 002.3-2.3A34.2 34.2 0 0024 12a34.2 34.2 0 00-.5-5.8zM9.8 15.3V8.7l6.1 3.3-6.1 3.3z" fill="currentColor"/></svg>
+      <a class="icon glass" href="#" aria-label="YouTube" title="Coming soon">
+        <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true">
+          <path d="M23.5 6.2a3.3 3.3 0 00-2.3-2.3C19.1 3.5 12 3.5 12 3.5s-7.1 0-9.2.4A3.3 3.3 0 00.5 6.2 34.2 34.2 0 000 12a34.2 34.2 0 00.5 5.8 3.3 3.3 0 002.3 2.3c2.1.4 9.2.4 9.2.4s7.1 0 9.2-.4a3.3 3.3 0 002.3-2.3A34.2 34.2 0 0024 12a34.2 34.2 0 00-.5-5.8zM9.8 15.3V8.7l6.1 3.3-6.1 3.3z" fill="currentColor"/>
+        </svg>
       </a>
     </div>
   </main>
