--- a/staff.html
+++ b/staff.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
-  <div class="stars"></div>
+  <canvas id="space" aria-hidden="true"></canvas>
+  <div class="vignette" aria-hidden="true"></div>
 
   <div class="page">
     <a class="back" href="/">← Go Back</a>
@@ -22,5 +23,6 @@
   </div>
 
   <script src="assets/staff.js"></script>
+  <script src="assets/script.js"></script>
 </body>
 </html>
