--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
   <link rel="icon" href="assets/logo-placeholder.svg">
 </head>
 <body>
-  <!-- Animated background -->
-  <canvas id="space" aria-hidden="true"></canvas>
-  <div class="vignette" aria-hidden="true"></div>
+  <!-- Animated background (pure CSS) -->
+  <div class="bg">
+    <div class="stars"></div>
+    <div class="glow glow-a"></div>
+    <div class="glow glow-b"></div>
+    <div class="orbit orbit-1"></div>
+    <div class="orbit orbit-2"></div>
+    <div class="orbit orbit-3"></div>
+  </div>
 
   <!-- Centered stack -->
-  <div class="center-wrap">
-    <div class="logo-wrap">
-      <img src="assets/logo-placeholder.svg" alt="Server logo" class="logo drop" />
-    </div>
+  <main class="wrap">
+    <img class="logo" src="assets/logo-placeholder.svg" alt="MoonMC logo placeholder" />
 
-    <!-- Click to copy IP on this line -->
-    <div id="players" class="players glass" role="button" tabindex="0"
-         title="Click to copy server IP (play.moon-mc.net)">
+    <!-- Click to copy -->
+    <button id="players" class="chip" type="button" title="Click to copy IP">
       ? Online Players
-    </div>
+    </button>
 
+    <!-- Pills -->
     <nav class="menu">
       <a class="pill" href="https://discord.com/channels/1408337450958458921/1411037949331509390" target="_blank" rel="noopener">Forum</a>
       <a class="pill" href="https://discord.com/channels/1408337450958458921/1408337451532947459" target="_blank" rel="noopener">Support</a>
@@ -36,21 +40,22 @@
       <a class="pill" href="https://discord.com/channels/1408337450958458921/1408337452061556777" target="_blank" rel="noopener">Rules</a>
     </nav>
 
+    <!-- Socials -->
     <div class="socials">
-      <a class="icon glass" href="https://discord.gg/UxBUxxcsV2" target="_blank" rel="noopener" aria-label="Discord">
-        <!-- straight Discord logo -->
+      <a class="icon" href="https://discord.gg/UxBUxxcsV2" target="_blank" rel="noopener" aria-label="Discord">
+        <!-- classic upright Discord glyph -->
         <svg viewBox="0 0 245 240" width="26" height="26" aria-hidden="true">
           <path fill="currentColor" d="M104.4 104.9c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.2-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1zm36.2 0c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.2-5 10.2-11.1 0-6.1-4.6-11.1-10.2-11.1z"/>
           <path fill="currentColor" d="M189.5 20h-134C36.3 20 20 36.3 20 55.5v129c0 19.3 16.3 35.5 35.5 35.5h114.4l-5.4-18.8 13.1 12.2 12.4 11.5 21.9 19.1V55.5C212 36.3 195.7 20 176.5 20zm-24.1 125.9s-2.3-2.8-4.2-5.3c8.3-2.4 11.5-7.7 11.5-7.7-2.6 1.7-5 2.9-7.2 3.7-3.1 1.3-6.1 2.1-9 2.6-5.9 1.1-11.3.8-15.9 0-3.5-.6-6.5-1.3-9-2.1-1.4-.5-2.9-1-4.4-1.7-.2-.1-.4-.2-.6-.3-.1 0-.1 0-.2-.1-.9-.4-1.4-.7-1.4-.7s3 5.1 10.9 7.6c-1.9 2.5-4.2 5.5-4.2 5.5-13.9-.4-19.2-9.6-19.2-9.6 0-20.3 9.1-36.7 9.1-36.7 9.1-6.8 17.7-6.6 17.7-6.6l.6.7c-11.4 3.3-16.6 8.3-16.6 8.3s1.4-.8 3.8-1.8c6.9-3 12.4-3.8 14.7-4 .4-.1.8-.1 1.2-.1 4.3-.6 9.1-.8 14.1-.2 6.6.8 13.7 2.8 20.9 6.8 0 0-5-4.7-15.8-8l.8-.9s8.6-.2 17.7 6.6c0 0 9.1 16.4 9.1 36.7 0 0-5.3 9.2-19.3 9.6z"/>
         </svg>
       </a>
-      <a class="icon glass" href="https://www.youtube.com/channel/UCyH_y9QNSNZdbbdNw94OHyg" target="_blank" rel="noopener" aria-label="YouTube">
+      <a class="icon" href="https://www.youtube.com/channel/UCyH_y9QNSNZdbbdNw94OHyg" target="_blank" rel="noopener" aria-label="YouTube">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path d="M23.5 6.2a3.3 3.3 0 00-2.3-2.3C19.1 3.5 12 3.5 12 3.5s-7.1 0-9.2.4A3.3 3.3 0 00.5 6.2 34.2 34.2 0 000 12a34.2 34.2 0 00.5 5.8 3.3 3.3 0 002.3 2.3c2.1.4 9.2.4 9.2.4s7.1 0 9.2-.4a3.3 3.3 0 002.3-2.3A34.2 34.2 0 0024 12a34.2 34.2 0 00-.5-5.8zM9.8 15.3V8.7l6.1 3.3-6.1 3.3z" fill="currentColor"/></svg>
       </a>
     </div>
 
     <footer class="foot">© 2025 MoonMC — All rights reserved.</footer>
-  </div>
+  </main>
 
   <!-- tiny toast -->
   <div id="toast" class="toast" aria-live="polite">Copied</div>
