--- a/staff.html
+++ b/staff.html
@@ -4,30 +4,22 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Our Staff — MoonMC</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <div class="bg">
-    <div class="stars"></div>
-    <div class="glow glow-a"></div>
-    <div class="glow glow-b"></div>
-    <div class="orbit orbit-1"></div>
-    <div class="orbit orbit-2"></div>
-    <div class="orbit orbit-3"></div>
+    <div class="chunk-grid"></div>
+    <div class="clouds"></div>
+    <div class="aurora"></div>
   </div>
 
-  <div class="page">
-    <div class="inner">
-      <a class="back" href="/">← Go Back</a>
-      <h1>Our Staff</h1>
-      <p class="subtitle">Meet our staff!</p>
+  <div class="staff-wrap">
+    <a class="back" href="/">← Back</a>
+    <h1>Our Staff</h1>
+    <p class="muted">Meet the team that keeps MoonMC running.</p>
 
-      <div id="staffGrid" class="grid"></div>
-      <p id="emptyMsg" class="empty hidden">No staff added yet. Edit <code>assets/staff.json</code>.</p>
-    </div>
+    <div id="staffGrid" class="grid"></div>
+    <p id="emptyMsg" class="muted">No staff added yet. Edit <code>assets/staff.json</code>.</p>
   </div>
 
   <script src="assets/staff.js"></script>
