--- a/rules.html
+++ b/rules.html
@@ -8,25 +8,27 @@
 </head>
 <body>
   <div class="bg">
-    <div class="chunk-grid"></div>
-    <div class="clouds"></div>
-    <div class="aurora"></div>
+    <img class="bg-gif" src="assets/bg.gif" alt="">
+    <div class="bg-gradient"></div>
+    <canvas id="stars" aria-hidden="true"></canvas>
+    <div class="grain"></div>
   </div>
 
   <div class="rules-wrap">
     <a class="back" href="/">← Back</a>
     <h1>Server Rules</h1>
-    <p class="muted">Keep it fair & friendly. Breaking rules can lead to mutes/bans.</p>
+    <p class="muted">Keep the server fair & friendly. Breaking rules can lead to mutes/bans.</p>
 
     <ol class="rules">
-      <li>No cheating, hacking, or exploiting bugs.</li>
-      <li>No doxxing, harassment, hate speech, or threats.</li>
-      <li>Respect staff decisions. Appeal in the proper channel.</li>
+      <li>No cheating, hacked clients, or exploiting bugs.</li>
+      <li>No harassment, hate speech, doxxing, or threats.</li>
+      <li>Respect staff decisions. Use the proper channels for appeals.</li>
       <li>No advertising other servers without permission.</li>
-      <li>Use common sense; if it feels scummy, don’t do it.</li>
+      <li>Use common sense; if it ruins the fun for others, don’t do it.</li>
     </ol>
-
-    <p class="muted small">Edit <code>rules.html</code> in your repo to change these.</p>
+    <p class="muted">Edit <code>rules.html</code> to change these.</p>
   </div>
+
+  <script src="assets/script.js"></script>
 </body>
 </html>
