--- a/staff.html
+++ b/staff.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <div class="bg">
-    <div class="chunk-grid"></div>
-    <div class="clouds"></div>
-    <div class="aurora"></div>
+    <img class="bg-gif" src="assets/bg.gif" alt="">
+    <div class="bg-gradient"></div>
+    <canvas id="stars" aria-hidden="true"></canvas>
+    <div class="grain"></div>
   </div>
 
   <div class="staff-wrap">
@@ -23,5 +24,6 @@
   </div>
 
   <script src="assets/staff.js"></script>
+  <script src="assets/script.js"></script>
 </body>
 </html>
