--- a/rules.html
+++ b/rules.html
@@ -10,23 +10,21 @@
   <div class="bg">
     <img class="bg-gif" src="assets/bg.gif" alt="">
     <div class="bg-gradient"></div>
-    <canvas id="stars" aria-hidden="true"></canvas>
+    <canvas id="fx"></canvas>
     <div class="grain"></div>
   </div>
 
-  <div class="rules-wrap">
+  <div class="centerPage">
     <a class="back" href="/">← Back</a>
     <h1>Server Rules</h1>
     <p class="muted">Keep the server fair & friendly. Breaking rules can lead to mutes/bans.</p>
-
     <ol class="rules">
       <li>No cheating, hacked clients, or exploiting bugs.</li>
       <li>No harassment, hate speech, doxxing, or threats.</li>
-      <li>Respect staff decisions. Use the proper channels for appeals.</li>
+      <li>Respect staff decisions. Appeal in the proper channel.</li>
       <li>No advertising other servers without permission.</li>
       <li>Use common sense; if it ruins the fun for others, don’t do it.</li>
     </ol>
-    <p class="muted">Edit <code>rules.html</code> to change these.</p>
   </div>
 
   <script src="assets/script.js"></script>
