--- a/staff.html
+++ b/staff.html
@@ -10,11 +10,11 @@
   <div class="bg">
     <img class="bg-gif" src="assets/bg.gif" alt="">
     <div class="bg-gradient"></div>
-    <canvas id="stars" aria-hidden="true"></canvas>
+    <canvas id="fx"></canvas>
     <div class="grain"></div>
   </div>
 
-  <div class="staff-wrap">
+  <div class="centerPage">
     <a class="back" href="/">← Back</a>
     <h1>Our Staff</h1>
     <p class="muted">Meet the team that keeps MoonMC running.</p>
