--- a/rules.html
+++ b/rules.html
@@ -8,23 +8,23 @@
 </head>
 <body>
   <div class="bg">
-    <img class="bg-gif" src="assets/bg.gif" alt="">
-    <div class="bg-gradient"></div>
-    <canvas id="fx"></canvas>
-    <div class="grain"></div>
+    <div class="mesh"></div><div class="vignette"></div><canvas id="fx"></canvas>
   </div>
 
-  <div class="centerPage">
+  <div class="page">
     <a class="back" href="/">← Back</a>
     <h1>Server Rules</h1>
-    <p class="muted">Keep the server fair & friendly. Breaking rules can lead to mutes/bans.</p>
+    <p class="muted">Keep things fair & friendly. Breaking rules can lead to mutes/bans.</p>
+
     <ol class="rules">
       <li>No cheating, hacked clients, or exploiting bugs.</li>
       <li>No harassment, hate speech, doxxing, or threats.</li>
-      <li>Respect staff decisions. Appeal in the proper channel.</li>
+      <li>Respect staff decisions. Use proper channels for appeals.</li>
       <li>No advertising other servers without permission.</li>
       <li>Use common sense; if it ruins the fun for others, don’t do it.</li>
     </ol>
+
+    <p class="tiny muted">Edit <code>rules.html</code> to change/add rules.</p>
   </div>
 
   <script src="assets/script.js"></script>
