--- a/staff.html
+++ b/staff.html
@@ -3,21 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our Staff — MoonMC</title>
+  <title>Staff — MoonMC</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <div class="bg">
-    <img class="bg-gif" src="assets/bg.gif" alt="">
-    <div class="bg-gradient"></div>
-    <canvas id="fx"></canvas>
-    <div class="grain"></div>
+    <div class="mesh"></div><div class="vignette"></div><canvas id="fx"></canvas>
   </div>
 
-  <div class="centerPage">
+  <div class="page">
     <a class="back" href="/">← Back</a>
     <h1>Our Staff</h1>
-    <p class="muted">Meet the team that keeps MoonMC running.</p>
+    <p class="muted">Meet the team behind MoonMC.</p>
 
     <div id="staffGrid" class="grid"></div>
     <p id="emptyMsg" class="muted">No staff added yet. Edit <code>assets/staff.json</code>.</p>
